--- a/src/components/Calendar.css
+++ b/src/components/Calendar.css
@@ -43,7 +43,7 @@
   font-size: 1.5rem;
   color: #1e293b;
   margin: 0;
-  min-width: 200px;
+  min-width: 150px;
   text-align: center;
 }
 
