--- a/src/pages/LessonsPage.css
+++ b/src/pages/LessonsPage.css
@@ -51,7 +51,7 @@
 .search-box {
   position: relative;
   flex: 1;
-  min-width: 300px;
+  min-width: 200px;
 }
 
 .search-box svg {
